# todo

./: .gitignore  CMakeLists.txt  README.md
scripts/: init.sql
src/: Command.cpp  Command.h  Database.cpp  Database.h  Task.cpp  Task.h  command.h  exceptions.h  main.cpp  task.cpp  task.h  taskTest.cpp  todo.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  catch.hpp  commandTests.cpp  command_tests.cpp  db_tests.cpp  taskTests.cpp  task_tests.cpp
